<resources>
    <string name="app_name">NotesApp</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t have any account? please click here!</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_successfully">Login successfully</string>
    <string name="error">Error!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="Register">Sign Up</string>
    <string name="notes_introduce">Notes+ Introduce</string>
    <string name="create_profile_success">Create profile is successfully</string>
    <string name="please_enter_post_details">Please enter post details</string>
    <string name="api_button">Click here to use a ready list</string>
    <string name="enter_your_title">Enter note title</string>
    <string name="enter_your_text_note">Enter note text</string>
    <string name="share_post">Share Post</string>
    <string name="all_notes">All Notes</string>
    <string name="favorites">My Notes</string>
    <string name="profile">Profile</string>
    <string name="titleNote">Title</string>
    <string name="add_new_note">Add Note</string>
    <string name="post_update_successfully">Note data update successfully</string>
    <string name="post_shared_successfully">Post shared successfully</string>
    <string name="person">Person</string>
    <string name="enter_your_location">Entrt your location</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="save">Save</string>
</resources>