<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_notes">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.notesapp.activities.ui.main.CreateProfileFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_all_notes"
        android:name="com.example.notesapp.AllNotesFragmentFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />


    <fragment
        android:id="@+id/navigation_my_notes"
        android:name="com.example.notesapp.MyListNotesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_my_notes_to_addNoteFragment"
            app:destination="@id/addNoteFragment" />
    </fragment>
    <fragment
        android:id="@+id/addNoteFragment"
        android:name="com.example.notesapp.AddNoteFragment"
        android:label="fragment_add_note"
        tools:layout="@layout/fragment_add_note" />
</navigation>