<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/please_enter_post_details"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#784606"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:hint="@string/enter_your_title"
            android:textColor="@color/black"
            android:background="@color/noteTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:hint="@string/enter_your_text_note"
            android:textColor="@color/black"

            android:background="@color/notebackColor">




            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPostContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:maxLines="10"
                  android:minLines="5"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#FF8E704B"
            app:cardCornerRadius="15dp">



            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:background="#EAE3E3"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_sticky_note_2_24"
                app:cardBackgroundColor="#FF8E704B" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/camera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/baseline_add_a_photo_24"/>

            <ImageView
                android:id="@+id/gallery"
                android:src="@drawable/baseline_add_photo_alternate_24"
                android:layout_width="46dp"
                android:layout_height="46dp"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSharePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/share_post"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:cornerRadius="16dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />
    </LinearLayout>

</FrameLayout>